--- a/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
+++ b/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
@@ -30,9 +31,9 @@ limitations under the License.
 
 <AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLResetPasswordController">
     <children>
-      <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
+      <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <center>
-            <ImageView blendMode="DARKEN" fitHeight="548.0" fitWidth="473.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+            <ImageView blendMode="DARKEN" fitHeight="550.0" fitWidth="475.0" pickOnBounds="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/bg-375x450.jpg" />
                </image>
@@ -47,7 +48,7 @@ limitations under the License.
             <Font size="20.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="loginInfoPane" layoutX="7.0" layoutY="182.0" prefHeight="258.0" prefWidth="463.0" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="182.0">
+      <AnchorPane fx:id="loginInfoPane" layoutX="7.0" layoutY="182.0" prefHeight="258.0" prefWidth="463.0" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="182.0">
          <children>
             <Label layoutX="63.0" layoutY="20.0" prefHeight="14.0" prefWidth="90.0" text="Email Address" textFill="#707070" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="219.0">
                <font>
@@ -59,14 +60,14 @@ limitations under the License.
             <Hyperlink fx:id="btnBack" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER" contentDisplay="TOP" layoutX="100.0" layoutY="77.0" onAction="#onBackAction" prefHeight="24.0" prefWidth="272.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
          </children>
       </AnchorPane>
-      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="10.0">
+      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
          <center>
             <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/ipsx-logo-230x45.png" />
                </image>
                <BorderPane.margin>
-                  <Insets left="-40.0" />
+                  <Insets left="-30.0" />
                </BorderPane.margin>
             </ImageView>
          </center>
@@ -93,7 +94,7 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btnSendLink" defaultButton="true" layoutX="123.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="121.0" AnchorPane.rightAnchor="121.0">
+      <JFXButton fx:id="btnSendLink" defaultButton="true" disable="true" layoutX="123.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="12.0" />
          </font>
@@ -101,6 +102,7 @@ limitations under the License.
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
    <opaqueInsets>
       <Insets />
