--- a/src/sx/ip/resources/fxml/FXMLLogin.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLogin.fxml
@@ -36,9 +36,9 @@ limitations under the License.
             <Font size="20.0" />
          </font>
       </Label>
-      <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
+      <BorderPane prefHeight="550.0" prefWidth="475.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <center>
-            <ImageView blendMode="DARKEN" fitHeight="549.0" fitWidth="470.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+            <ImageView blendMode="DARKEN" fitHeight="550.0" fitWidth="475.0" pickOnBounds="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/bg-375x450.jpg" />
                </image>
@@ -48,12 +48,12 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <AnchorPane layoutX="67.0" layoutY="423.0" prefHeight="75.0" prefWidth="342.0" AnchorPane.leftAnchor="67.0" AnchorPane.rightAnchor="65.0">
+      <AnchorPane layoutX="67.0" layoutY="423.0" prefHeight="75.0" prefWidth="342.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Label fx:id="loginErrorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="2.0" />
+            <Label fx:id="loginErrorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="123.0" layoutY="373.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
+      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="123.0" layoutY="373.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="12.0" />
          </font>
@@ -61,7 +61,7 @@ limitations under the License.
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="329.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
+      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="329.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="12.0" />
          </font>
