--- a/src/sx/ip/resources/fxml/FXMLLogin.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLogin.fxml
@@ -30,7 +30,7 @@ limitations under the License.
 
 <AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLoginController">
     <children>
-      <Label prefHeight="64.0" prefWidth="253.0" text="Please Login to continue" textAlignment="JUSTIFY" textFill="#707070" textOverrun="CLIP" wrapText="true" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="120.0" />
+      <Label prefHeight="64.0" prefWidth="253.0" text="Please login to continue" textAlignment="JUSTIFY" textFill="#707070" textOverrun="CLIP" wrapText="true" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="120.0" />
       <Label text="Login" textFill="#707070" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="120.0">
          <font>
             <Font size="20.0" />
@@ -53,7 +53,7 @@ limitations under the License.
             <Label fx:id="loginErrorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
-      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="123.0" layoutY="373.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="122.0" layoutY="312.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="12.0" />
          </font>
@@ -61,7 +61,7 @@ limitations under the License.
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="329.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="262.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="248.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="12.0" />
          </font>
