--- a/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
@@ -153,7 +153,7 @@ limitations under the License.
          </cursor>
       </JFXButton>
       <Hyperlink fx:id="removeAll" alignment="CENTER_RIGHT" contentDisplay="RIGHT" focusTraversable="false" layoutX="224.0" layoutY="512.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#removeAllSettings" prefHeight="24.0" prefWidth="239.0" text="Remove all settings" textAlignment="RIGHT" textFill="#2aace0" underline="true" wrapText="true" />
-      <Label fx:id="restartSettingsMsg" alignment="CENTER" contentDisplay="CENTER" layoutX="52.0" layoutY="470.0" prefHeight="45.0" prefWidth="375.0" textAlignment="CENTER" textFill="#707070" visible="false">
+      <Label fx:id="restartSettingsMsg" alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="504.0" prefHeight="14.0" prefWidth="163.0" textAlignment="CENTER" textFill="#707070" visible="false" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="503.0">
          <font>
             <Font size="11.0" />
          </font>
