--- a/src/sx/ip/resources/fxml/FXMLDashboard.fxml
+++ b/src/sx/ip/resources/fxml/FXMLDashboard.fxml
@@ -31,7 +31,6 @@ limitations under the License.
 
 <AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLDashboardController">
     <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" />
       <BorderPane layoutX="3.0" prefHeight="550.0" prefWidth="472.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <center>
             <ImageView blendMode="DARKEN" fitHeight="550.0" fitWidth="475.0" pickOnBounds="true" smooth="false" BorderPane.alignment="CENTER">
@@ -56,7 +55,7 @@ limitations under the License.
             </ImageView>
          </center>
          <left>
-            <Hyperlink fx:id="btnBack" onAction="#goBackAction" BorderPane.alignment="CENTER">
+            <Hyperlink fx:id="btnBack" BorderPane.alignment="CENTER">
                <graphic>
                   <MaterialIconView glyphName="ARROW_BACK" size="25">
                      <cursor>
@@ -70,7 +69,7 @@ limitations under the License.
             </Hyperlink>
          </left>
       </BorderPane>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
@@ -97,11 +96,34 @@ limitations under the License.
             <JFXButton minHeight="29.0" minWidth="121.0" style="-fx-background-color: #ffffff; -fx-border-color: #2aace0;" text="Inactive" textFill="#2aace0" />
          </children>
       </HBox>
-      <AnchorPane layoutX="42.0" layoutY="186.0" minHeight="44.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0">
+      <AnchorPane layoutX="42.0" layoutY="186.0" minHeight="44.0" style="-fx-border-color: #d0dce0; -fx-background-color: #ffffff; -fx-border-radius: 5px;" AnchorPane.bottomAnchor="319.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="186.0">
          <children>
-            <MaterialIconView fill="#2aace0" glyphName="ADD" size="25" wrappingWidth="23.999998569488525" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0" />
-            <Label layoutX="119.0" prefHeight="25.0" prefWidth="155.0" text="Create Token Deposit" textAlignment="JUSTIFY" textFill="#2aace0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="8.0" />
+            <MaterialIconView fill="#2aace0" glyphName="ADD" size="25" text="" wrappingWidth="23.999998569488525" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="8.0" />
+            <Label layoutX="119.0" prefHeight="25.0" prefWidth="155.0" text="Create Token Deposit" textAlignment="JUSTIFY" textFill="#2aace0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="8.0" />
+            <JFXButton fx:id="depositFX" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
+         <cursor>
+            <Cursor fx:constant="CLOSED_HAND" />
+         </cursor>
+      </AnchorPane>
+      <AnchorPane layoutX="52.0" layoutY="196.0" minHeight="44.0" style="-fx-border-color: #d0dce0; -fx-background-color: #ffffff; -fx-border-radius: 5px;" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="238.0">
+         <children>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="10.0">
+               <image>
+                  <Image url="@../imgs/trade.png" />
+               </image>
+            </ImageView>
+            <Label alignment="TOP_LEFT" layoutX="80.0" layoutY="12.0" prefHeight="16.0" prefWidth="220.0" text="About you as Provider" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="12.0">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label alignment="TOP_LEFT" layoutX="81.0" layoutY="32.0" prefHeight="16.0" prefWidth="269.0" text="Informations about operating as provider" textAlignment="JUSTIFY" textFill="#999999" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="31.0" />
+            <JFXButton fx:id="providerFX" minHeight="66.0" ripplerFill="#2aace0" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+         <cursor>
+            <Cursor fx:constant="CLOSED_HAND" />
+         </cursor>
       </AnchorPane>
     </children>
    <opaqueInsets>
