--- a/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
+++ b/src/sx/ip/resources/fxml/FXMLProxySummary.fxml
@@ -83,7 +83,7 @@ limitations under the License.
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="10.0" layoutY="10.0" maxHeight="80.0" minHeight="80.0" prefHeight="80.0" prefWidth="419.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
+      <AnchorPane layoutX="10.0" layoutY="10.0" maxHeight="80.0" minHeight="80.0" prefHeight="80.0" prefWidth="419.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="145.0">
          <children>
             <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="20.0">
                <image>
@@ -104,69 +104,81 @@ limitations under the License.
             </Label>
          </children>
       </AnchorPane>
-      <JFXComboBox AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="260.0" />
-      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <AnchorPane layoutX="40.0" layoutY="110.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="120.0">
+      <AnchorPane layoutX="30.0" layoutY="272.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="260.0">
          <children>
-            <Label layoutX="119.0" prefHeight="25.0" prefWidth="67.0" text="Package" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="0.0">
+            <JFXComboBox prefHeight="26.0" prefWidth="450.0" promptText="Choose a country" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="29.0" layoutY="121.0" prefHeight="25.0" prefWidth="447.0" style="-fx-background-color: #6d6d6d20;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
+         <children>
+            <Label layoutX="119.0" prefHeight="25.0" prefWidth="67.0" text="Package" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="50.0" layoutY="120.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="240.0">
+      <AnchorPane layoutX="50.0" layoutY="120.0" style="-fx-background-color: #6d6d6d20;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
          <children>
-            <Label layoutX="119.0" prefHeight="25.0" prefWidth="67.0" text="Country" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="0.0">
+            <Label layoutX="119.0" prefHeight="25.0" prefWidth="67.0" text="Country" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="29.0" layoutY="312.0" prefHeight="221.0" prefWidth="419.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="311.0">
+      <AnchorPane layoutX="3.0" layoutY="311.0" prefHeight="238.0" prefWidth="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="310.0">
          <children>
-            <AnchorPane>
+            <AnchorPane style="-fx-background-color: #6d6d6d20;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <Label layoutX="119.0" prefHeight="25.0" prefWidth="106.0" text="Other Details" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="0.0">
+                  <Label layoutX="119.0" prefHeight="25.0" prefWidth="106.0" text="Other Details" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="35.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: white; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutX="27.0" layoutY="45.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="204.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="27.0">
                <children>
-                  <Label text="12:00" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
+                  <Label layoutY="8.0" prefHeight="18.0" prefWidth="67.0" text="12:00" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="7.0" />
                   <Label text="20 Apr 2018" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <Label layoutX="48.0" layoutY="13.0" text="Start Date" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="66.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutX="242.0" layoutY="45.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="204.0" style="-fx-background-color: #ffffff;" AnchorPane.rightAnchor="27.0">
                <children>
                   <Label text="13:00" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0" />
                   <Label text="20 Apr 2018" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <Label layoutX="48.0" layoutY="13.0" text="End Date" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="97.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutY="119.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="473.0">
                <children>
-                  <Label text="Brazil" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Label layoutX="48.0" layoutY="13.0" text="Country" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+                  <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="109.0" layoutY="-4.0" onAction="#loginAction" prefHeight="40.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Confirm Order" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="144.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="144.0">
+            <AnchorPane layoutY="182.0" maxHeight="57.0" minHeight="32.0" prefWidth="419.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <JFXButton layoutX="179.0" layoutY="15.0" prefHeight="23.0" prefWidth="67.0" style="-fx-background-color: #2aace0; -fx-background-radius: 30;" text="Confirm Order" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutY="182.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <JFXButton layoutY="15.0" maxHeight="32.0" minHeight="23.0" prefHeight="32.0" prefWidth="417.0" style="-fx-background-radius: 30;" text="Cancel" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <JFXButton fx:id="btnLoginEmail1" defaultButton="true" onAction="#loginAction" prefHeight="40.0" ripplerFill="#2aace0" style="-fx-background-color: white;" text="Cancel" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="120.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
                </children>
             </AnchorPane>
          </children>
       </AnchorPane>
+      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
    <opaqueInsets>
       <Insets />
